<resources>
    <string name="app_name">Currency Converter</string>
    <string name="enter_current_currency">Enter current currency</string>
    <string name="final_currency_will_be_displayed_here">Final currency will be displayed here</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="favorites">Favorites</string>
    <string name="swap">Swap</string>
    <string name="start_converting">Start Converting</string>
    <string name="convert">Convert</string>
    <string name="clear2">Clear</string>
    <string name="select_currency">Select Currency</string>
    <string name="currency_1">Currency 1</string>
    <string name="select_currency_to_exchange">Select Currency to Exchange</string>
    <string name="currency_2">Currency 2</string>
    <string name="converted_value">Converted Value</string>
    <string name="result">Result</string>
    <string name="second_currency">Second Currency</string>
    <string name="first_currency">First Currency</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="name_john_doe">Name: John Doe</string>
    <string name="email_john_doe_example_com">Email: john.doe@example.com</string>
    <string name="account_type_premium">Account Type: Premium</string>
    <string name="select_default_currency" translatable="false" />
    <string name="dark_mode">Dark Mode</string>
    <string name="decimal_places">Decimal Places</string>
    <string name="language" translatable="false">Testing</string>
    <string name="hindi" />
    <string name="english" />
</resources>