<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <!-- Back button -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:src="@drawable/xchange_black" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="663dp"
        android:background="@color/orange"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/exchangeIcon"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/currency_swap_pic" />

        <TextView
            android:id="@+id/selectCurr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/select_currency"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currencyOne"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/currency_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/swapButton"
                android:layout_width="131dp"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/swap_button" />

            <ImageView
                android:id="@+id/unfilledFavorite"
                android:layout_width="131dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/favorites_unfilled" />
        </LinearLayout>

        <TextView
            android:id="@+id/selectCurrExchange"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/select_currency_to_exchange"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currencyTwo"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/currency_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/convertButton"
                android:layout_width="201dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/green"
                android:text="@string/convert" />

            <Button
                android:id="@+id/clearButton2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/clear2"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="15dp"
        app:fabCradleVerticalOffset="10dp"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_app_bar_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
