<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:src="@drawable/xchange_black" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:background="@color/light_green">


            <!-- Settings option: Decimal Places -->
            <CheckBox
                android:id="@+id/decimalPlacesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:text="@string/decimal_places" />

            <Spinner
                android:id="@+id/defaultCurrencySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:entries="@array/currencies_array"
                android:prompt="@string/select_default_currency" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/darkModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:text="@string/dark_mode" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_app_bar_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
