<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:src="@drawable/xchange_black" />

            <!-- Customize the top app bar content as needed -->

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/orange">

            <!-- Add your account information layout here -->
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/orange"
                android:text="@string/name_john_doe"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/orange"
                android:text="@string/email_john_doe_example_com"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewAccountType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/orange"
                android:text="@string/account_type_premium"
                android:textSize="18sp" />

            <!-- Add more TextViews or other UI elements as needed -->

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_app_bar_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
